--- a/style.css
+++ b/style.css
@@ -19,3 +19,31 @@
     color: white;
     cursor: pointer;
 }
+.cat1{
+    background-color: orange;
+}
+.cat2{
+    background-color: orchid;
+}
+.cat3{
+    background-color: blue;
+}
+.cat1, .cat2, .cat3 {
+    padding: 10px 30px;
+    border-radius: 10px;
+}
+.categories h1{
+    color: white;
+}
+.categories img{
+    width: 100px
+}
+.card{
+    border:none;
+    box-shadow: 5px  5px 10px lightgray;
+    border-radius: 10px;
+}
+.card-footer{
+    border: none;
+    background-color: white;
+}
